# gds-core

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  context7.json  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  security.yml
.hypothesis/constants/: 021e69632fac0091  0d9a027faceff8d7  0f2d12dedcb06219  1560a51ac9c66efb  19377a3a38683453  1e5ba8804462cfbf  2442a95b57e46661  2a846dbd39b70828  2ca0f2b446657c76  3287dee2c51eebb5  3a356dc3c4c1aeae  3a6447c305dd0a5a  3af1f6bf1e0072a9  41e7702e913f3269  47afa93e3c04db97  49ec8bc0e2c1e8bf  4b4bd64e908536e9  4cb330c12c1cf3b9  4d01b94ed49cf45f  539a07d14ba9c631  5778a306b1e17786  5c5ddce1df04a26c  5ef2b46dafb2642c  6002e064d9837fb8  720bb2d392c98802  7c2096717ac2bba5  7da98be9df90a320  7fd7ee5dc4ea2ae8  8a7e4acf124a93cd  8ad6b25a6bd095e8  8e319d735c5b99ac  8f29e7654bf98441  a3ac6bf68fb7c3f0  a8dcac1926006e66  b7262b122a557242  bf856ca69f9a345f  d342168950488c1c  d8bcc210fb778f34  ec040768b087f92e  ef32655eadbc0527  (+3 more)
.hypothesis/examples/04e6b3400353b141/: b49931b7267ee947  ed99f499e43388f3
.hypothesis/examples/b49931b7267ee947/: 0543361dfba75a59  1049ff0dc3aab43c  164e1245cc26fb8d  23d1752498f95adf  266e1f058beea852  2b02a80e23a526e1  422a60ac68f60a02  451cd693385cf745  48cc79232b67dd49  5b37403a3a59c4cb  616cfafd2b4a2345  64772f249cd44cfb  67f04224a33a9ece  680511320d043c24  752b9801f678ac25  7e68e98e5d80931b  82eb9d7c308acada  895b8d8b6192d3f7  94aaa5209fae71ad  a393120ffb1191fb  d410d3b92129ff57  db24c04a00e5f4ac  dcc8b45911ce99c1  f3adc15933f970d9
.hypothesis/examples/ed99f499e43388f3/: c5dcf1cf8046cee8
docs/: architecture.md  changelog.md  index.md
docs/analysis/: getting-started.md  index.md
docs/business/: getting-started.md  index.md
docs/business/api/: cld-checks.md  cld-compile.md  cld-elements.md  cld-model.md  common.md  index.md  init.md  scn-checks.md  scn-compile.md  scn-elements.md  scn-model.md  verification.md  vsm-checks.md  vsm-compile.md  vsm-elements.md  vsm-model.md
docs/business/guide/: diagram-types.md  verification.md
docs/case-studies/: axelrod.md  index.md
docs/continuous/: getting-started.md  index.md
docs/control/: getting-started.md  index.md
docs/control/api/: checks.md  compile.md  elements.md  init.md  model.md  verification.md
docs/control/guide/: elements.md  verification.md
docs/examples/: building-models.md  feature-matrix.md  index.md  learning-path.md
docs/examples/examples/: crosswalk.md  evolution-of-trust.md  insurance.md  lotka-volterra.md  prisoners-dilemma.md  sir-epidemic.md  thermostat.md
docs/framework/: ecosystem.md  gds_deepdive.md  gds_improvement_plan_completed.md  index.md  quick-reference.md
docs/framework/api/: blocks.md  canonical.md  compiler.md  index.md  init.md  ir.md  parameters.md  query.md  serialize.md  spaces.md  spec.md  state.md  types.md  verification.md
docs/framework/design/: assurance-claims.md  check-specifications.md  controller-plant-duality.md  disturbance-formalization.md  execution-semantics.md  gds-deepdive.md  temporal-agnosticism.md  traceability-matrix.md  v0.2-design.md
docs/framework/getting-started/: install.md  quickstart.md
docs/framework/guide/: architecture.md  blocks.md  composition.md  glossary.md  pipeline.md  spaces.md  spec.md  state.md  types.md  verification.md
docs/framework/proposals/: entity-redesign-and-expression-language.md
docs/games/: architecture-overview.md  ecosystem.md  equilibrium.md  getting-started.md  index.md
docs/games/api/: cli.md  dsl-base.md  dsl-compile.md  dsl-composition.md  dsl-games.md  dsl-library.md  dsl-pattern.md  dsl-types.md  init.md  ir.md  reports.md  verification.md  viz.md
docs/games/design/: architecture-overview.md
docs/games/guide/: architecture.md  cli.md  game-types.md  patterns.md  reports.md  verification.md  visualization.md
docs/guides/: architecture-milestone-layer0.md  best-practices.md  choosing-a-dsl.md  dsl-roadmap.md  getting-started.md  interoperability.md  paper-implementation-gap.md  real-world-patterns.md  research-boundaries.md  rosetta-stone.md  troubleshooting.md  verification.md  view-stratification.md  visualization.md
docs/owl/: getting-started.md  index.md
docs/owl/api/: export.md  import.md  init.md  ontology.md  serialize.md  shacl.md  sparql.md
docs/owl/guide/: representability.md
docs/psuu/: getting-started.md  index.md
docs/psuu/api/: evaluation.md  init.md  kpi.md  metric.md  optimizers.md  results.md  space.md  sweep.md
docs/psuu/guide/: concepts.md  optimizers.md  spaces.md
docs/research/: controller-plant-duality.md  deep_research.md  fishery-case-study.md  formal-representability.md  improvement-roadmap.md  journal.md  paper-implementation-gap.md  representation-gap.md  research-boundaries.md  semantic-web-summary.md  verification-plan.md
docs/research/verification/: r3-undecidability.md  representability-proof.md
docs/software/: getting-started.md  index.md
docs/software/api/: c4-checks.md  c4-compile.md  c4-elements.md  c4-model.md  common.md  cp-checks.md  cp-compile.md  cp-elements.md  cp-model.md  dep-checks.md  dep-compile.md  dep-elements.md  dep-model.md  dfd-checks.md  dfd-compile.md  dfd-elements.md  dfd-model.md  erd-checks.md  erd-compile.md  erd-elements.md  erd-model.md  index.md  init.md  sm-checks.md  sm-compile.md  sm-elements.md  sm-model.md  verification.md
docs/software/guide/: diagram-types.md  verification.md
docs/stockflow/: getting-started.md  index.md
docs/stockflow/api/: checks.md  compile.md  elements.md  init.md  model.md  verification.md
docs/stockflow/guide/: elements.md  verification.md
docs/symbolic/: getting-started.md  index.md
docs/tutorials/: getting-started.md
docs/viz/: getting-started.md  index.md
docs/viz/api/: architecture.md  (+4 more)
gds_core/: __init__.py
improvement-plans/: review_synthesis.md
(+3 files in other folders)
