[project]
name = "gds-core"
version = "0.1.0"
description = "GDS ecosystem monorepo — typed compositional specifications for complex systems"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Rohan Mehta", email = "rohan@block.science" },
]
keywords = [
    "generalized-dynamical-systems",
    "compositional-systems",
    "gds-framework",
    "system-specification",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "gds-framework>=0.2.0",
    "gds-viz>=0.1.0",
    "gds-games>=0.1.0",
    "gds-stockflow>=0.1.0",
    "gds-control>=0.1.0",
    "gds-examples>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/BlockScience/gds-core"
Repository = "https://github.com/BlockScience/gds-core"
Documentation = "https://blockscience.github.io/gds-core"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gds_core"]

[tool.uv.sources]
gds-framework = { workspace = true }
gds-viz = { workspace = true }
gds-games = { workspace = true }
gds-stockflow = { workspace = true }
gds-control = { workspace = true }
gds-examples = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Mermaid diagram strings are inherently long and cannot be wrapped
"packages/gds-examples/prisoners_dilemma/visualize.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["gds", "gds_viz", "ogs", "stockflow", "gds_control"]

[dependency-groups]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
